--- a/client-server/src/main/resources/application-dev.properties
+++ b/client-server/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/oauth2?useSSL=false
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/oauth2?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/oauth2_demo?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/oauth2?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
 spring.datasource.hikari.username=root
-spring.datasource.hikari.password=wqsqzj
+spring.datasource.hikari.password=123456
