--- a/client-server/src/main/resources/application.properties
+++ b/client-server/src/main/resources/application.properties
@@ -11,18 +11,25 @@ spring.security.oauth2.client.registration.google.client-id=google-client-id
 spring.security.oauth2.client.registration.google.client-secret=google-client-secret
 
 # provider
-spring.security.oauth2.client.provider.myauthorizeserver.authorization-uri=http://localhost:8001/oauth/authorize
-spring.security.oauth2.client.provider.myauthorizeserver.token-uri=http://localhost:8001/oauth/token
+spring.security.oauth2.client.provider.myauthorizeserver-auth-code.authorization-uri=http://auth-server:8001/oauth/authorize
+spring.security.oauth2.client.provider.myauthorizeserver-auth-code.token-uri=http://auth-server:8001/oauth/token
 
 # OAuth 2.0 client properties.
-spring.security.oauth2.client.registration.myauthorizeserver.provider=myauthorizeserver
-spring.security.oauth2.client.registration.myauthorizeserver.client-id=stragory
-spring.security.oauth2.client.registration.myauthorizeserver.client-secret=wqsqzj
-spring.security.oauth2.client.registration.myauthorizeserver.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.myauthorizeserver.redirect-uri=http://127.0.0.1:8002/oauth/token
+spring.security.oauth2.client.registration.ac.provider=myauthorizeserver-auth-code
+spring.security.oauth2.client.registration.ac.client-id=stragory
+spring.security.oauth2.client.registration.ac.client-secret=$2a$10$J9fGzwblYSR0TxeBNjtJC.wCyhN4cSnEHaEqYFQsdKVR7K5fWk0tu
+spring.security.oauth2.client.registration.ac.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.ac.scope=all
+spring.security.oauth2.client.registration.ac.redirect-uri=http://client-server:8002/oauth/token
 
-#https://graph.qq.com/oauth2.0/token?code=56C027D44CCE898A960652A39F5176D0&state=dDNZCOwLjyzuNv-6-wvQ9bXxWZlJDURdLMd0J4SnT8Q%3D&grant_type=authorization_code&client_id=101767754&client_secret=853eebdf239062ed54e0e23b9721f2c2&redirect_uri=http://127.0.0.1:8002/oauth/token
-#请求示例 access_token=C8C15A2B25148FA26BBE065C57D380AC&expires_in=7776000&refresh_token=C036D7B8C56EAA04E963E1E79FF748CD content-type text/html
+spring.security.oauth2.client.provider.myauthorizeserver-implicit.authorization-uri=http://auth-server:8001/oauth/authorize
+spring.security.oauth2.client.provider.myauthorizeserver-implicit.token-uri=http://auth-server:8001/oauth/token
+spring.security.oauth2.client.registration.im.provider=myauthorizeserver-implicit
+spring.security.oauth2.client.registration.im.client-id=SwordArtOnline
+spring.security.oauth2.client.registration.im.client-secret=$2a$10$J9fGzwblYSR0TxeBNjtJC.wCyhN4cSnEHaEqYFQsdKVR7K5fWk0tu
+spring.security.oauth2.client.registration.im.authorization-grant-type=implicit
+spring.security.oauth2.client.registration.im.redirect-uri=http://client-server:8002/oauth/token
+
 spring.security.oauth2.client.provider.qq.authorization-uri=https://graph.qq.com/oauth2.0/authorize
 spring.security.oauth2.client.provider.qq.token-uri=https://graph.qq.com/oauth2.0/token
 spring.security.oauth2.client.provider.qq.user-info-uri=https://graph.qq.com/user/get_user_info
@@ -33,7 +40,7 @@ spring.security.oauth2.client.registration.qq.provider=qq
 spring.security.oauth2.client.registration.qq.client-id=101832748
 spring.security.oauth2.client.registration.qq.client-secret=d12ec6b70a9e428aa0ea6c8d8f7e99db
 spring.security.oauth2.client.registration.qq.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.qq.redirect-uri=http://127.0.0.1:8002/oauth/token
+spring.security.oauth2.client.registration.qq.redirect-uri=http://client-server:8002/oauth/token
 spring.security.oauth2.client.registration.qq.client-authentication-method=post
 
 logging.group.web=DEBUG
@@ -51,4 +58,4 @@ spring.devtools.livereload.enabled=true
 
 # sso配置
 # 这个设置为这个的话就是使用授权模式
-security.oauth2.sso.login-path=http://localhost:8001/oauth/authorize?response_type=token&client_id=stragory&redirect_uri=http://localhost:8002/oauth/1&scope=all
+#security.oauth2.sso.login-path=http://localhost:8001/oauth/authorize?response_type=token&client_id=stragory&redirect_uri=http://localhost:8002/oauth/1&scope=all
