--- a/client-server/src/main/resources/application.properties
+++ b/client-server/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.security.oauth2.client.registration.ac.client-id=stragory
 spring.security.oauth2.client.registration.ac.client-secret=$2a$10$J9fGzwblYSR0TxeBNjtJC.wCyhN4cSnEHaEqYFQsdKVR7K5fWk0tu
 spring.security.oauth2.client.registration.ac.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.ac.scope=all
-spring.security.oauth2.client.registration.ac.redirect-uri=http://client-server:8002/oauth/token
+spring.security.oauth2.client.registration.ac.redirect-uri=http://client-server:8002/api/say
 
 spring.security.oauth2.client.provider.myauthorizeserver-implicit.authorization-uri=http://auth-server:8001/oauth/authorize
 spring.security.oauth2.client.provider.myauthorizeserver-implicit.token-uri=http://auth-server:8001/oauth/token
