--- a/client-server/src/main/resources/application.properties
+++ b/client-server/src/main/resources/application.properties
@@ -40,7 +40,7 @@ spring.security.oauth2.client.registration.qq.provider=qq
 spring.security.oauth2.client.registration.qq.client-id=101832748
 spring.security.oauth2.client.registration.qq.client-secret=d12ec6b70a9e428aa0ea6c8d8f7e99db
 spring.security.oauth2.client.registration.qq.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.qq.redirect-uri=http://client-server:8002/oauth/token
+spring.security.oauth2.client.registration.qq.redirect-uri=http://mangu178.xin:8002/oauth/token
 spring.security.oauth2.client.registration.qq.client-authentication-method=post
 
 logging.group.web=DEBUG
