--- a/authorization-server/src/main/resources/application.properties
+++ b/authorization-server/src/main/resources/application.properties
@@ -8,11 +8,12 @@ spring.security.user.name=killer
 spring.security.user.password={noop}wqsqzj
 
 # serverTimezone 配置客户端时区为GMT+8，服务器端会根据客户端时区做出相应计算
-spring.datasource.url=jdbc:mysql://localhost:3306/oauth2?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://localhost:3306/oauth2_demo?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/oauth2_demo?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
 spring.datasource.hikari.username=root
-spring.datasource.hikari.password=123456
+spring.datasource.hikari.password=wqsqzj
+#spring.datasource.hikari.password=123456
 
 #localhost:8001/oauth/authorize?client_id=stragory&response_type=code&redirect_uri=http://localhost:8002/oauth/1
 spring.mvc.view.prefix=/static
