--- a/client-server/src/main/resources/application.properties
+++ b/client-server/src/main/resources/application.properties
@@ -11,24 +11,23 @@ spring.security.oauth2.client.registration.google.client-id=google-client-id
 spring.security.oauth2.client.registration.google.client-secret=google-client-secret
 
 # provider
-spring.security.oauth2.client.provider.myauthorizeserver-auth-code.authorization-uri=http://auth-server:8001/oauth/authorize
-spring.security.oauth2.client.provider.myauthorizeserver-auth-code.token-uri=http://auth-server:8001/oauth/token
+spring.security.oauth2.client.provider.myauthorizeserver.authorization-uri=http://auth-server:8001/oauth/authorize
+spring.security.oauth2.client.provider.myauthorizeserver.token-uri=http://auth-server:8001/oauth/token
 
 # OAuth 2.0 client properties.
-spring.security.oauth2.client.registration.ac.provider=myauthorizeserver-auth-code
+spring.security.oauth2.client.registration.ac.provider=myauthorizeserver
 spring.security.oauth2.client.registration.ac.client-id=stragory
 spring.security.oauth2.client.registration.ac.client-secret=$2a$10$J9fGzwblYSR0TxeBNjtJC.wCyhN4cSnEHaEqYFQsdKVR7K5fWk0tu
 spring.security.oauth2.client.registration.ac.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.ac.scope=all
 spring.security.oauth2.client.registration.ac.redirect-uri=http://client-server:8002/api/say
 
-spring.security.oauth2.client.provider.myauthorizeserver-implicit.authorization-uri=http://auth-server:8001/oauth/authorize
-spring.security.oauth2.client.provider.myauthorizeserver-implicit.token-uri=http://auth-server:8001/oauth/token
-spring.security.oauth2.client.registration.im.provider=myauthorizeserver-implicit
+spring.security.oauth2.client.registration.im.provider=myauthorizeserver
 spring.security.oauth2.client.registration.im.client-id=SwordArtOnline
 spring.security.oauth2.client.registration.im.client-secret=$2a$10$J9fGzwblYSR0TxeBNjtJC.wCyhN4cSnEHaEqYFQsdKVR7K5fWk0tu
 spring.security.oauth2.client.registration.im.authorization-grant-type=implicit
-spring.security.oauth2.client.registration.im.redirect-uri=http://client-server:8002/oauth/token
+spring.security.oauth2.client.registration.im.scope=all
+spring.security.oauth2.client.registration.im.redirect-uri=http://resource-server:8003/api/hello
 
 spring.security.oauth2.client.provider.qq.authorization-uri=https://graph.qq.com/oauth2.0/authorize
 spring.security.oauth2.client.provider.qq.token-uri=https://graph.qq.com/oauth2.0/token
