--- a/authorization-server/src/main/resources/application.properties
+++ b/authorization-server/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/oauth2_demo?useSSL=false&allow
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/oauth2_demo?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
 spring.datasource.hikari.username=root
-spring.datasource.hikari.password=wqsqzj
-#spring.datasource.hikari.password=123456
+#spring.datasource.hikari.password=wqsqzj
+spring.datasource.hikari.password=123456
 
 #localhost:8001/oauth/authorize?client_id=stragory&response_type=code&redirect_uri=http://localhost:8002/oauth/1
 spring.mvc.view.prefix=/static
