--- a/client-server-sso-1/src/main/resources/application.properties
+++ b/client-server-sso-1/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 
 
-security.oauth2.sso.login-path=/login
+security.oauth2.sso.login-path=http://auth-server:8001/login
+
+security.oauth2.resource.user-info-uri=http://???
 
 spring.datasource.url=jdbc:mysql://localhost:3306/oauth2_demo?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
