--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,16 @@
 
     <groupId>groupId</groupId>
     <artifactId>oauth2-demo</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
     <modules>
         <module>authorization-server</module>
         <module>client-server</module>
         <module>resource-server</module>
+        <module>client-server-sso-1</module>
+        <module>client-server-sso-2</module>
+        <module>client-server-sso-1</module>
+        <module>cas-keycloak</module>
     </modules>
 </project>
