--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    
     <groupId>groupId</groupId>
     <artifactId>oauth2-demo</artifactId>
     <packaging>pom</packaging>
@@ -16,6 +16,8 @@
         <module>client-server-sso-1</module>
         <module>client-server-sso-2</module>
         <module>client-server-sso-1</module>
-        <module>cas-keycloak</module>
+        <module>cas-keycloak-client-1</module>
+        <module>cas-keycloak-client-2</module>
     </modules>
+
 </project>
